2016-05-11  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/read.py: Fixed the handling of comments.

	Comment tags are now handled properly. If a XML file contains a comment
	only None is returned. Comments within a file storing actual data are
	ignored.

	* typhon/arts/xml/tests/test_matpack_types.py:

	Added two test cases to check the handling of comments in XML files.

	* typhon/arts/xml/tests/reference/arrayofindex-comment.xml:

	ArrayOfIndex with additional comment tag.

	* typhon/arts/xml/tests/reference/comment.xml: Only a comment tag.

2016-05-11  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/_static/increased_width.css: CSS style with increased maxwidth.

	The maximum width for the documentation is increased to prevent plots
	using the typhon style from being scaled.

	* doc/_templates/layout.html:

	Use added CSS style for the default documentation layout.

	* typhon/plots/stylelib/typhon.mplstyle:

	Switched yellow and cyan in colorcycle. This way blue hues do not follow
	each other when the cycle starts over again.

2016-05-11  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

2016-05-11  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.2.16 Release.

	* ChangeLog: Minor formatting fixes.

2016-05-10  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/plots.rst:

	Show source and generated plots of stylesheet_gallery.py

	* doc/pyplots/stylesheet_gallery.py:

	Generate example plots using the classic style and all styles shipped
	with typhon.

2016-05-03  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/stylelib/typhon.mplstyle:

	Improved the overall look of the typhon style sheet. Changes include grid
	settings, adjusted linewidths and fine tuned scientific notation limits.

2016-05-02  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/griddedfield.py, typhon/arts/scattering.py:

	Added convenience method to_atmlab_dict to GriddedField,